--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
     /*Отключаем отступы на всём элементе*/
     body {
-        margin:0;
+        margin:0
     }
 
     /* Отключаем scrollbar (Полоса сбоку для того, чтобы листать) */
